--- a/src/assets/CSS/styles.css
+++ b/src/assets/CSS/styles.css
@@ -6,6 +6,9 @@ padding: 0;
 box-sizing: border-box;
 }
 
+/* main{
+  background-image: rgb(222, 222, 222);
+}  */
 /* logo */
 
 img[alt='logo']{
@@ -33,3 +36,24 @@ img[alt='logo']{
   nav a.router-link-exact-active {
     color: #42b983;
   }
+
+  body, html {
+    margin: 0;
+    padding: 0;
+     /* Prevent scrollbars */
+    width: 100%;
+    height: 100%;
+}
+#video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the video covers the entire container */
+  z-index: -1; 
+  /* filter: grayscale(0%) brightness(80%) contrast(80%) saturate(60%);  */
+
+  
+}
+
