--- a/src/assets/CSS/styles.css
+++ b/src/assets/CSS/styles.css
@@ -41,7 +41,7 @@ img[alt='logo']{
     margin: 0;
     padding: 0;
      /* Prevent scrollbars */
-     background-image: url('../abstract-digital-background-with-technology-circuit-board-texture-electronic-motherboard-illustration-communication-and-engineering-concept-illustration-vector.jpg');
+     background-image: url('../ebdee9b4.gif');
   background-size: cover;
   background-repeat: repeat;
     width: 100%;
